2006-04-22  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/org.gnome.seahorse.service.in: Add no-daemon flag
    to dbus service activation.
    
2006-04-21  Adam Schreiber  <sadam@clemson.edu>

    * daemon/seahorse-service-crypto.c:
    * libseahorse/seahorse-import.c:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-notification.c:
    * libseahorse/seahorse-signatures.c:
    * plugins/applet/seahorse-applet.c:
    * src/main.c: Adds the ability to attach a notification
    to a GtkWidget and attaches panel applet notifications to it.

2006-04-20  Nate Nielsen  <nielsen@memberwebs.com>

    * data/seahorse.schemas.in:
    * libseahorse/seahorse-add-keyserver.glade:
    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-generate-druid.glade:
    * libseahorse/seahorse-multi-encrypt.glade: Fix typos.
    Fixes from Clytie Siddall. Bug #338850
    
2006-04-20  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * seahorse-ldap-source.c: Async DNS lookups for LDAP connections
    (using libsoup). Fixes #320276
    
2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>

    * INSTALL:
    * configure.in:
    * agent/Makefile.am:
    * agent/seahorse-agent-actions.c:
    * agent/seahorse-agent-cache.c:
    * agent/seahorse-agent-prompt.c:
    * agent/seahorse-agent.h:
    * daemon/Makefile.am:
    * data/seahorse.schemas.in:
    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-prefs.glade: Add gnome-keyring support
    to the seahorse agent. Can be disabled with --disable-gnome-keyring
    
2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-properties.c: Automatically discover 
    keys on the 'trust' page. Bug #335417
    
2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key.c: Map GPGME validity/trust
    enum into seahorse properly.
    
2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>
