@@ -310,11 +310,12 @@
 		      <property name="spacing">0</property>
 
 		      <child>
-			<widget class="GtkFrame" id="frame8">
+			<widget class="GtkFrame" id="owner-photo-frame">
 			  <property name="visible">True</property>
 			  <property name="label_xalign">0</property>
 			  <property name="label_yalign">0.5</property>
 			  <property name="shadow_type">GTK_SHADOW_IN</property>
+			  <signal name="drag_data_received" handler="on_owner_photo_drag_received" last_modification_time="Mon, 10 Apr 2006 07:12:35 GMT"/>
 
 			  <child>
 			    <widget class="GtkAlignment" id="alignment45">
