@@ -1,3 +1,11 @@
+2006-04-24  Nate Nielsen  <nielsen@memberwebs.com>
+    
+    * src/seahorse-key-dialogs.h:
+    * src/seahorse-key-properties.c:
+    * src/seahorse-pgp-private-key-properties.glade:
+    * src/seahorse-photos.c: Drag and drop support for add 
+    photo id. Patch from Jim Pharis. Bug #336021
+    
 2006-04-22  Nate Nielsen  <nielsen@memberwebs.com>
 
     * daemon/org.gnome.seahorse.service.in: Add no-daemon flag
